fix(css): change colors to match AA contrast

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@
 }
 
 a {
-  @apply text-blue-500;
+  @apply text-blue-600 dark:text-blue-500;
 
   &:hover {
     @apply underline;
